--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
-    "name": "laravel/laravel",
+    "name": "laravel/asset-ms",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
